apple devices background not showing fix

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 body{
     margin: 0;
-    background-image: url(./assets/images/background-desktop.png);
+    background: url(./assets/images/background-desktop.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
